css por terminar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,3 @@
-
 /* 
 
     You can write your own styles here...
@@ -10,3 +9,23 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.big-counter {
+  width: 100%;
+  background-color: black;
+  height: 200px;
+  color: white;
+  font-size: 110px;
+  text-align: center;
+  margin-bottom: 1pc;
+}
+.box {
+  display: inline-block;
+  height: 170px;
+  background-color: #0e0e0e;
+  border-radius: 10px;
+  margin-top: 1pc;
+  padding-bottom: 1pc;
+  width: 100px;
+  margin-left: 10px;
+  margin-bottom: 30px;
+}
